# Controlador_Ascensores

./: .gitignore  ESPECIFICACION_INTEGRACION_NUEVOS_ENDPOINTS.md  README.md  add_emergency_requests.py  algo.md  apendices.md  create_complete_appendix.sh  resultados_y_conclusiones.tex  sistema_ascensores_api_gateway.mmd  sistema_ascensores_arquitectura.mmd  sistema_ascensores_servidor_central.mmd
api_gateway/: CMakeLists.txt  Doxyfile  Doxyfile_simple  README.md  build_api_gateway.sh  create_tfg_appendix.sh  gateway.env  generate_docs.sh  generate_pdf_report.sh  run_100_api_gateways.sh  test_unique_instances.sh
api_gateway/docs/latex/: annotated.tex  api__common__defs_8h.tex  api__common__defs_8h_source.tex  api__handlers_8c.tex  api__handlers_8c__incl.md5  api__handlers_8h.tex  api__handlers_8h__incl.md5  api__handlers_8h_source.tex  can__bridge_8c.tex  can__bridge_8c__incl.md5  can__bridge_8h.tex  can__bridge_8h_source.tex  coap__config_8h.tex  coap__config_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a71814f687eac4a66afe8ed2754aae92.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  elevator__state__manager_8c.tex  elevator__state__manager_8c__incl.md5  elevator__state__manager_8h.tex  elevator__state__manager_8h_source.tex  execution__logger_8c.tex  execution__logger_8c__incl.md5  execution__logger_8h.tex  execution__logger_8h_source.tex  files.tex  group__ansi__colors__gw.tex  group__central__server.tex  group__coap__resources.tex  group__coap__timeouts.tex  group__gateway__listen.tex  group__logging__macros__gw.tex  group__simulation__data.tex  group__simulation__functions.tex  include_2api__gateway_2api__handlers_8h.tex  include_2api__gateway_2api__handlers_8h_source.tex  logging__gw_8h.tex  logging__gw_8h_source.tex  main_8c.tex  main_8c__incl.md5  (+38 more)
api_gateway/docs/tfg_appendix/: codigo_fuente_appendix.tex  ejemplo_inclusion.tex
api_gateway/include/api_gateway/: api_common_defs.h  api_handlers.h  can_bridge.h  coap_config.h  dtls_common_config.h  elevator_state_manager.h  execution_logger.h  logging_gw.h  simulation_loader.h
api_gateway/logs/2025-06-17/: ejecucion_20-56-36-697.md  ejecucion_20-56-37-000.md  ejecucion_20-56-37-296.md  ejecucion_20-56-37-681.md  ejecucion_20-56-37-802.md  ejecucion_20-56-38-103.md  ejecucion_20-56-38-312.md  ejecucion_20-56-38-578.md  ejecucion_20-56-38-840.md  ejecucion_20-56-39-173.md  ejecucion_20-56-39-449.md  ejecucion_20-56-39-750.md  ejecucion_20-56-40-031.md  ejecucion_20-56-40-254.md  ejecucion_20-56-40-519.md  ejecucion_20-56-40-804.md  ejecucion_20-56-41-063.md  ejecucion_20-56-41-311.md  ejecucion_20-56-41-647.md  ejecucion_20-56-41-918.md  ejecucion_20-56-42-204.md  ejecucion_20-56-42-488.md  ejecucion_20-56-42-707.md  ejecucion_20-56-43-044.md  ejecucion_20-56-43-275.md  ejecucion_20-56-43-580.md  ejecucion_20-56-43-885.md  ejecucion_20-56-44-177.md  ejecucion_20-56-44-420.md  ejecucion_20-56-44-757.md  ejecucion_20-56-45-009.md  ejecucion_20-56-45-296.md  ejecucion_20-56-45-518.md  ejecucion_20-56-45-779.md  ejecucion_20-56-46-043.md  ejecucion_20-56-46-378.md  ejecucion_20-56-46-576.md  ejecucion_20-56-46-830.md  ejecucion_20-56-47-101.md  ejecucion_20-56-47-367.md  (+60 more)
api_gateway/logs/2025-06-19/: ejecucion_15-13-21-685.md  ejecucion_16-00-49-617.md  ejecucion_16-03-59-563.md  ejecucion_16-12-57-382.md  ejecucion_16-19-21-856.md  ejecucion_16-25-09-445.md  ejecucion_17-10-04-182.md
api_gateway/logs/2025-06-20/: ejecucion_20-11-46-647.md  ejecucion_20-21-52-468.md  ejecucion_20-24-42-940.md  ejecucion_20-26-41-752.md  ejecucion_20-29-44-534.md  ejecucion_20-29-44-995.md  ejecucion_20-29-45-517.md  ejecucion_20-29-46-079.md  ejecucion_20-29-46-646.md  ejecucion_20-29-47-257.md  ejecucion_20-29-47-765.md  ejecucion_20-29-48-330.md  ejecucion_20-29-48-908.md  ejecucion_20-29-49-477.md  ejecucion_20-29-50-058.md  ejecucion_20-29-50-633.md  ejecucion_20-29-51-189.md  ejecucion_20-29-51-746.md  ejecucion_20-29-52-306.md  ejecucion_20-29-52-875.md  ejecucion_20-29-53-430.md  ejecucion_20-29-54-045.md  ejecucion_20-29-54-684.md  ejecucion_20-29-55-196.md  ejecucion_20-29-55-787.md  ejecucion_20-29-56-389.md  ejecucion_20-29-57-000.md  ejecucion_20-29-57-570.md  ejecucion_20-29-58-170.md  ejecucion_20-29-58-691.md  ejecucion_20-29-59-282.md  ejecucion_20-29-59-858.md  ejecucion_20-30-00-420.md  ejecucion_20-30-00-966.md  ejecucion_20-30-01-557.md  ejecucion_20-30-02-117.md  ejecucion_20-30-02-671.md  ejecucion_20-30-03-243.md  ejecucion_20-30-03-862.md  ejecucion_20-30-04-393.md  (+64 more)
api_gateway/mass_execution_logs/: final_report.txt
api_gateway/src/: api_handlers.c  api_handlers.h  can_bridge.c  elevator_state_manager.c  execution_logger.c  main.c  main_dynamic_port.c  mi_simulador_ascensor.c  psk_manager.c  psk_manager.h  simulation_loader.c
servidor_central/: .dockerignore  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile_simple  README.md  build_servidor_central.sh  check_connectivity.sh  cleanup_all.sh  create_tfg_appendix.sh  deploy.sh  generate_simple.sh  latex_header.tex  metallb-config.yaml
servidor_central/kustomize/: deployment.yaml  hpa.yaml  service.yaml
servidor_central/src/: main.c  psk_validator.c  psk_validator.h
tests/: CMakeLists.txt  README.md  clean_temp_build.sh  run_all_tests.sh
tests/integration/: test_can_to_coap.c
tests/mocks/: CMakeLists.txt  mock_can_interface.c  mock_can_interface.h  mock_coap_session.c  mock_coap_session.h  mock_execution_logger.c  mock_execution_logger.h
tests/temp-build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  reporte_consolidado.txt  test_api_handlers  test_api_handlers_report.txt  test_can_bridge  test_can_bridge_report.txt  test_can_to_coap  test_can_to_coap_report.txt  test_elevator_state_manager  test_elevator_state_manager_report.txt  test_psk_security  test_psk_security_report.txt  test_results.json  test_servidor_central  test_servidor_central_report.txt
tests/unit/: test_api_handlers.c  test_can_bridge.c  test_elevator_state_manager.c  test_psk_security.c  test_servidor_central.c
(+238 files in other folders)
